# hkml-simple-backtest-demo

./: .gitignore  README.md  my_simple_strategy.py  pyproject.toml  run_demo.bat  run_demo.sh
scripts/: make_tiny_db.py
src/hkml/: __init__.py  abtest.py  metrics.py  simple_backtest.py  simple_cli.py
